--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -99,20 +99,20 @@ text: Tekst
 name.first: Imię
 name.last: Nazwisko
 all.changes.saved: 'Wszystkie zmiany zostały zapisane'
-announcement-free.add: 'Dodaj ogłoszenie bezpłatne'
+announcement.free.add: 'Dodaj ogłoszenie bezpłatne'
 daily.price: 'Cena/dzień emisji'
 canceled.payment: 'Anulowano zamówienie'
 payment.was.canceled: 'Zamówienie zostało anulowane'
 payment.info: 'Płatność za zamówienie nr %orderNumber%'
 zones.info: 'Informacje o strefach'
 zones.short.info: 'Poniżej znajduje się lista aktywnych stron i stref (miejsc, w których umieszczać można bannery) wraz z dostępnymi maksymalnymi rozmiarami'
-acid.ad.server: 'AcidAdServer'
-fork.on.github: github
+acid.name.long: 'AcidAdServer'
+acid.promo.github: github
 edit.profile: 'edytuj swój profil'
 analytics.stats: 'Statystyki Analytics'
 empty.banners.list: 'Lista bannerów jest pusta'
 check.zones: 'Aktywacja w strefach'
-tutorial: Tutorial
+menu.guide: Tutorial
 successful.payment: 'Dziękujemy za płatność'
 transaction.was.queued: 'Płatność została zakolejkowana w systemie płatności, sprawdź listę bannerów za jakiś czas. Jeśli dokonałeś płatności za pomocą klienta Bitcoin, będziesz musiał chwilkę poczekać :)'
 extend.the.payment: 'Przedłuż płatność'
@@ -126,23 +126,23 @@ user.decides: 'user'
 max.days.error: 'Maksymalna liczba dni, na jaką można wykupić banner to: %maxDays%'
 payment.type: 'Typ płatności'
 announcement.standard: 'Ogłoszenie bezpłatne'
-edit.announcement: 'Edytuj ogłoszenie'
-add.announcement: 'Dodaj ogłoszenie'
+announcement.edit: 'Edytuj ogłoszenie'
+announcement.add: 'Dodaj ogłoszenie'
 announcement.saved: 'Ogłoszenie zostało zapisane'
-your.announcements: 'Twoje ogłoszenia'
-new.announcement: 'Nowe ogłoszenie'
+announcement.plural.yours: 'Twoje ogłoszenia'
+announcement.new: 'Nowe ogłoszenie'
 announcement.deleted: 'Ogłoszenie zostało usunięte'
 announcement.free: 'Ogłoszenia darmowe'
-announcements: 'Ogłoszenia'
+announcement.plural: 'Ogłoszenia'
 banners: 'Bannery'
 announcement.add: 'Dodaj ogłoszenie'
 default.currency: 'Domyślna waluta'
 rules.accept: 'Akceptuję <a href="%rules_url%">regulamin</a>'
 rules: 'Regulamin'
 register: 'Rejestracja'
-empty.announcements.list: 'Lista ogłoszeń jest pusta'
+announcements.list.empty: 'Lista ogłoszeń jest pusta'
 check.to.disable: 'Wyłącz ogłoszenie'
 hello: 'Witaj!'
-announcement.was.added.or.edited: 'Ogłoszenie %title% zostało dodane lub wyedytowane'
+announcement.modified: 'Ogłoszenie %title% zostało dodane lub wyedytowane'
 announcement.edited: 'Ogłoszenie %title% zostało zmienione/dodane przez %user%'
 edit.in.admin.mode: 'Edytuj jako administrator'
