--- a/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
+++ b/src/Hyper/AdsBundle/Resources/translations/HyperAdsBundle.pl.yml
@@ -109,7 +109,9 @@ zones.short.info: 'Poniżej znajduje się lista aktywnych stron i stref (miejsc,
 acid.name.long: 'AcidAdServer'
 acid.promo.github: github
 edit.profile: 'edytuj swój profil'
-analytics.stats: 'Statystyki Analytics'
+analytics: 'Statystyki serwisu'
+analytics.stats: 'Google Analytics'
+quantcast.stats: 'Quantcast Live'
 empty.banners.list: 'Lista bannerów jest pusta'
 check.zones: 'Aktywacja w strefach'
 menu.guide: Tutorial
@@ -132,8 +134,9 @@ announcement.saved: 'Ogłoszenie zostało zapisane'
 announcement.plural.yours: 'Twoje ogłoszenia'
 announcement.new: 'Nowe ogłoszenie'
 announcement.deleted: 'Ogłoszenie zostało usunięte'
-announcement.free: 'Ogłoszenia darmowe'
 announcement.plural: 'Ogłoszenia'
+announcement.free: 'Ogłoszenia drobne'
+announcements: 'Ogłoszenia specjalne'
 banners: 'Bannery'
 announcement.add: 'Dodaj ogłoszenie'
 default.currency: 'Domyślna waluta'
